kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-deployment
  template:
    metadata:
      labels:
        app: demo-deployment
    spec:
      containers:
      - name: flask
        image: katdemo.jfrog.io/docker/kubernetes-demo:latest
        ports:
        - containerPort: 5000
